--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include README.rst
-recursive-include webdriver_test_tools/project/templates *
+recursive-include webdriver_test_tools/project/templates *.j2
