Added support for checkbox groups (same name, multiple values)
- Added checkbox type to InputObject.Type.SUPPORTS_MULTIPLE
- Updated __init__() to use appropriate get/set methods for checkboxes
based on self.multiple
- Updated test to test checkbox groups and multi-select inputs

--- a/test/page-object-tests/page_object_tests/pages/form.yml
+++ b/test/page-object-tests/page_object_tests/pages/form.yml
@@ -17,6 +17,7 @@ form:
       type: checkbox
     - name: 'optCheckboxGroup[]'
       type: checkbox
+      multiple: true
       options:
         - '1'
         - '2'
